<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="favoriteTeamUiModel"
            type="com.yagubogu.presentation.favorite.FavoriteTeamUiModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_selection_confirm_message"
            style="@style/TextView.Esamanru.Medium.20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/favorite_team_selection_confirm"
            app:layout_constraintBottom_toTopOf="@id/tv_favorite_team_emoji"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_favorite_team_emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{favoriteTeamUiModel.emoji}"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/tv_favorite_team_name"
            app:layout_constraintEnd_toEndOf="@id/tv_selection_confirm_message"
            app:layout_constraintStart_toStartOf="@id/tv_selection_confirm_message"
            app:layout_constraintTop_toBottomOf="@id/tv_selection_confirm_message"
            tools:text="\uD83D\uDC2F" />

        <TextView
            android:id="@+id/tv_favorite_team_name"
            style="@style/TextView.Pretendard.SemiBold.16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@{favoriteTeamUiModel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_favorite_team_emoji"
            tools:text="KIA 타이거즈" />

        <TextView
            android:id="@+id/tv_negative_btn"
            style="@style/TextView.Pretendard.Medium.16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="48dp"
            android:paddingVertical="20dp"
            android:text="@string/all_cancel"
            android:textColor="@color/gray500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_positive_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_favorite_team_name" />

        <TextView
            android:id="@+id/tv_positive_btn"
            style="@style/TextView.Pretendard.Medium.16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="48dp"
            android:paddingVertical="20dp"
            android:text="@string/all_confirm"
            android:textColor="@color/primary500"
            app:layout_constraintBottom_toBottomOf="@id/tv_negative_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_negative_btn"
            app:layout_constraintTop_toTopOf="@id/tv_negative_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
